force-app/main/default/objects/Insurance_Addon__c.object
<CustomObject>
    <label>Insurance Add-on</label>
    <pluralLabel>Insurance Add-ons</pluralLabel>

    <nameField>
        <label>Add-on Name</label>
        <type>Text</type>
    </nameField>


    <!-- Add-on catalog is controlled by ops/admin -->
    <sharingModel>ReadWrite</sharingModel>

    <!-- Addon_Code__c (legacy key / external id) -->
    <fields>
        <fullName>Addon_Code__c</fullName>
        <label>Add-on Code</label>
        <type>Text</type>
        <length>40</length>
        <unique>true</unique>
        <externalId>true</externalId>
    </fields>

    <!-- Addon_Type__c -->
    <fields>
        <fullName>Addon_Type__c</fullName>
        <label>Add-on Type</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Rider</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Coverage Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
    </fields>

    <!-- Default pricing -->
    <fields>
        <fullName>Monthly_Premium__c</fullName>
        <label>Monthly Premium</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>

    <fields>
        <fullName>One_Time_Fee__c</fullName>
        <label>One-time Fee</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>

    <!-- Applicability rules (simple legacy flags) -->
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <fullName>Critical Illness</fullName>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
    </fields>

    <!-- Limits -->
    <fields>
        <fullName>Max_Quantity__c</fullName>
        <label>Max Quantity</label>
        <type>Number</type>
        <precision>6</precision>
        <scale>0</scale>
    </fields>

    <!-- Effective dates -->
    <fields>
        <fullName>Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>Effective_To__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>

    <!-- Status -->
    <fields>
        <fullName>Is_Active__c</fullName>
        <label>Is Active</label>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
    </fields>

    <!-- Description -->
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

</CustomObject>